[package]

name = "unicopy"
version = "0.0.1"
authors = ["Daniel MacDougall <dmacdougall@gmail.com>"]

[dependencies.clipboard]
git = "https://github.com/dmac/clipboard"

[dependencies.http]
git = "https://github.com/chris-morgan/rust-http"

[dependencies.url]
git = "https://github.com/servo/rust-url"
